# device_reminder

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  README.md
tests/: CMakeLists.txt  test_app.cpp
tests/core/: test_app.cpp  test_bluetooth_task.cpp  test_buzzer_handler.cpp  test_buzzer_task.cpp  test_human_handler.cpp  test_human_task.cpp  test_main_handler.cpp  test_main_task.cpp
tests/core/bluetooth_task/: test_bluetooth_handler.cpp  test_bluetooth_process.cpp  test_bluetooth_task.cpp
tests/core/buzzer_task/: test_buzzer_process.cpp  test_buzzer_task.cpp
tests/core/human_task/: test_human_handler.cpp  test_human_process.cpp  test_human_task.cpp
tests/core/main_task/: test_main_handler.cpp  test_main_process.cpp  test_main_task.cpp
tests/data/: bluetooth_process.conf
tests/infra/: test_bluetooth_driver.cpp  test_buzzer_driver.cpp  test_file_loader.cpp  test_gpio_driver.cpp  test_local_message_queue.cpp  test_logger.cpp  test_message_codec.cpp  test_message_queue.cpp  test_message_receiver.cpp  test_message_sender.cpp  test_pir_driver.cpp  test_process_receiver.cpp  test_thread_dispatcher.cpp  test_thread_message_receiver.cpp  test_thread_message_sender.cpp  test_thread_queue.cpp  test_thread_receiver.cpp  test_thread_sender.cpp  test_timer_service.cpp  test_watch_dog.cpp  test_worker_dispatcher.cpp
tests/infra/bluetooth_driver/: test_bluetooth_driver.cpp
tests/infra/buzzer_driver/: test_buzzer_driver.cpp
tests/infra/file_loader/: test_file_loader.cpp
tests/infra/gpio_operation/gpio_reader/: test_gpio_reader.cpp
tests/infra/gpio_operation/gpio_setter/: test_gpio_setter.cpp
tests/infra/logger/: test_logger.cpp
tests/infra/pir_driver/: test_pir_driver.cpp
tests/infra/process_operation/: test_process_base.cpp  test_process_dispatcher.cpp  test_process_message.cpp  test_process_queue.cpp  test_process_receiver.cpp  test_process_sender.cpp
tests/infra/thread_operation/: test_thread_dispatcher.cpp  test_thread_queue.cpp  test_thread_receiver.cpp
tests/infra/thread_operation/thread_receiver/: test_thread_receiver.cpp
tests/infra/thread_operation/thread_sender/: test_thread_sender.cpp
tests/infra/timer_service/: test_timer_service.cpp
tests/integration/: CMakeLists.txt  test_main.cpp
tests/integration/core/app/: test_app.cpp
tests/integration/core/app_builder/: test_app.cpp  test_app_builder.cpp
tests/integration/core/bluetooth_task/: test_bluetooth_dispatcher.cpp  test_bluetooth_handler.cpp  test_bluetooth_process.cpp  test_bluetooth_task.cpp
tests/integration/core/buzzer_task/: test_buzzer_dispatcher.cpp  test_buzzer_handler.cpp  test_buzzer_process.cpp  test_buzzer_task.cpp
tests/integration/core/human_task/: test_human_dispatcher.cpp  test_human_handler.cpp  test_human_process.cpp  test_human_task.cpp
tests/integration/core/main_task/: test_main_dispatcher.cpp  test_main_handler.cpp  test_main_process.cpp  test_main_task.cpp
tests/integration/di/: app_injector.hpp
tests/integration/full_di/: test_app_run.cpp
tests/integration/full_di/di/: app_injector.hpp
tests/integration/infra/bluetooth_driver/: test_bluetooth_driver.cpp
tests/integration/infra/buzzer_driver/: test_buzzer_driver.cpp
tests/integration/infra/file_loader/: test_file_loader.cpp
tests/integration/infra/gpio_operation/: test_gpio_reader.cpp
tests/integration/infra/gpio_operation/gpio_reader/: test_gpio_reader.cpp
tests/integration/infra/gpio_operation/gpio_setter/: test_gpio_setter.cpp
tests/integration/infra/logger/: test_logger.cpp
tests/integration/infra/message/: test_message.cpp  test_message_codec.cpp  test_message_dispatcher.cpp  test_message_queue.cpp  test_process_sender.cpp  test_thread_sender.cpp
tests/integration/infra/message/message_codec/: test_message_codec.cpp
tests/integration/infra/pir_driver/: test_pir_driver.cpp
tests/integration/infra/process/: test_process.cpp
tests/integration/infra/process_operation/message_codec/: test_message_codec.cpp
tests/integration/infra/process_operation/process_base/: test_process_base.cpp
tests/integration/infra/process_operation/process_dispatcher/: test_process_dispatcher.cpp
tests/integration/infra/process_operation/process_message/: test_process_message.cpp
tests/integration/infra/process_operation/process_queue/: test_queue.cpp
tests/integration/infra/timer_service/: test_timer_service.cpp
tests/integration/infra/watch_dog/: test_watch_dog.cpp
tests/sample/: mock_sample.cpp
tests/stubs/: gpiod.h  gpiod_stub.cpp  gpiod_stub.h  popen_stub.cpp  popen_stub.h  posix_mq_stub.cpp  posix_mq_stub.h  setpriority_stub.cpp  setpriority_stub.h
tests/unit/core/app/: test_app.cpp
tests/unit/core/bluetooth_task/: test_bluetooth_dispatcher.cpp  test_bluetooth_handler.cpp  test_bluetooth_task.cpp
tests/unit/core/buzzer_task/: test_buzzer_dispatcher.cpp  test_buzzer_handler.cpp
tests/unit/core/human_task/: test_human_dispatcher.cpp  test_human_task.cpp
tests/unit/core/main_task/: test_main_dispatcher.cpp
tests/unit/infra/: test_bluetooth_driver.cpp  test_buzzer_driver.cpp  test_file_loader.cpp  test_gpio_reader.cpp  test_gpio_setter.cpp  test_logger.cpp  test_message.cpp  test_message_queue.cpp  test_pir_driver.cpp  test_process.cpp  test_timer_service.cpp  test_watch_dog.cpp
tests/unit/infra/bluetooth_driver/: test_bluetooth_driver.cpp
tests/unit/infra/buzzer_driver/: test_buzzer_driver.cpp
tests/unit/infra/file_loader/: test_file_loader.cpp
tests/unit/infra/gpio_operation/: test_gpio_setter.cpp
tests/unit/infra/message/: test_message_codec.cpp  test_message_queue.cpp  test_message_receiver.cpp  test_thread_sender.cpp
tests/unit/infra/pir_driver/: test_pir_driver.cpp
tests/unit/infra/process/: test_process.cpp
tests/unit/infra/process_operation/: test_process_base.cpp  test_process_dispatcher.cpp  test_process_queue.cpp  test_process_receiver.cpp  test_process_sender.cpp
tests/unit/infra/thread_operation/: test_thread_queue.cpp
tests/unit/infra/timer_service/: test_timer_service.cpp
tests/unit/infra/watch_dog/: test_watch_dog.cpp
(+285 files in other folders)
